Atualização do cadastro nutri e validação

--- a/NutriSystem-Front/src/app/home/home.component.html
+++ b/NutriSystem-Front/src/app/home/home.component.html
@@ -16,14 +16,17 @@
             </div>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">event_available</mat-icon>
-              <div class="sub-menu-title">Consultas</div>
+              <div class="sub-menu-title">Atendimento</div>
+            </div>
+            <div class="sub-menu-items">
+              <div class="sub-menu-items-description item-color" routerLink="/cadastroPaciente" routerLinkActive="active">
+                Novo</div>
             </div>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">contacts</mat-icon>
               <div class="sub-menu-title">Pacientes</div>
             </div>
             <div class="sub-menu-items">
-              <div class="sub-menu-items-description item-color">Meus Pacientes</div>
               <div class="sub-menu-items-description item-color" routerLink="/cadastroPaciente" routerLinkActive="active">
                 Novo Paciente</div>
             </div>
@@ -42,15 +45,6 @@
             <div class="sub-menu-items">
               <div class="sub-menu-items-description item-color" routerLink="/cadastroConsultorio"
                 routerLinkActive="active">Novo Consultório</div>
-            </div>
-            <div class="sub-menu">
-              <mat-icon class="sub-menu-icon">room_service</mat-icon>
-              <div class="sub-menu-title">Alimentos</div>
-  
-            </div>
-            <div class="sub-menu">
-              <mat-icon class="sub-menu-icon">restaurant_menu</mat-icon>
-              <div class="sub-menu-title">Receitas</div>
             </div>
           </div>
   
