--- a/NutriSystem-Front/src/app/marcar-consulta/marcar-consulta.component.html
+++ b/NutriSystem-Front/src/app/marcar-consulta/marcar-consulta.component.html
@@ -32,7 +32,7 @@
                           <mat-label>Selecione o Paciente</mat-label>
                         </mat-form-field>
                         <mat-form-field class="col-4" appearance="outline">
-                          <input matInput readonly [matDatepicker]="picker1" placeholder="Data da Consulta"
+                          <input matInput required readonly [matDatepicker]="picker1" placeholder="Data da Consulta"
                            formControlName="dataConsulta" value={{formsRegister.value.DataConsulta}}>
                           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                           <mat-datepicker #picker1></mat-datepicker>          
@@ -42,13 +42,22 @@
                       <mat-select required formControlName="horaConsulta" value={{formsRegister.value.horaConsulta}}>
                         <mat-option>Selecione</mat-option>
                        <mat-option value="07:00">07:00</mat-option>
+                       <mat-option value="07:30">07:30</mat-option>
                         <mat-option value="08:00">08:00</mat-option>
+                        <mat-option value="08:30">08:30</mat-option>
                         <mat-option value="09:00">09:00</mat-option>
+                        <mat-option value="09:30">09:30</mat-option>
                         <mat-option value="10:00">10:00</mat-option>
+                        <mat-option value="10:30">10:30</mat-option>
                         <mat-option value="11:00">11:00</mat-option>
+                        <mat-option value="11:30">11:30</mat-option>
                         <mat-option value="14:00">14:00</mat-option>
+                        <mat-option value="14:30">14:30</mat-option>
                         <mat-option value="15:00">15:00</mat-option>
+                        <mat-option value="15:30">15:30</mat-option>
                         <mat-option value="16:00">16:00</mat-option>
+                        <mat-option value="16:30">16:30</mat-option>
+                        <mat-option value="17:00">17:00</mat-option>
                       </mat-select>
                  </mat-form-field>
                  <mat-form-field class="col-3" appearance="outline">
@@ -56,7 +65,6 @@
                         <mat-select required formControlName="statusConsulta" value={{formsRegister.value.statusConsulta}}>
                           <mat-option>Selecione</mat-option>
                         <mat-option value="Agendada">Agendada</mat-option>
-                          <mat-option value="Em andamento">Em andamento</mat-option>
                           <mat-option value="Cancelada">Cancelada</mat-option>
                           <mat-option value="Finalizada">Finalizada</mat-option>
                         </mat-select>
@@ -69,7 +77,7 @@
                   <button mat-raised-button class="btn col-12" (click)="clearConsulta()">Limpar</button>
                 </div>
             <div class="col-sm-12 col-md-1  mt-4">
-              <button mat-raised-button class="btn col-12"  (click)="saveConsulta()">Salvar</button>
+              <button mat-raised-button class="btn col-12"  [disabled]="!formsRegister.valid" (click)="saveConsulta()">Salvar</button>
             </div>
           </div>
         </mat-card>
@@ -95,22 +103,30 @@
                   <mat-label>Horário da Consulta</mat-label>
                       <mat-select formControlName="horaConsultaFilterCtrl">
                         <mat-option>Selecione</mat-option>
-                       <mat-option value="07:00">07:00</mat-option>
-                        <mat-option value="08:00">08:00</mat-option>
-                        <mat-option value="09:00">09:00</mat-option>
-                        <mat-option value="10:00">10:00</mat-option>
-                        <mat-option value="11:00">11:00</mat-option>
-                        <mat-option value="14:00">14:00</mat-option>
-                        <mat-option value="15:00">15:00</mat-option>
-                        <mat-option value="16:00">16:00</mat-option>
+                        <mat-option value="07:00">07:00</mat-option>
+                        <mat-option value="07:30">07:30</mat-option>
+                         <mat-option value="08:00">08:00</mat-option>
+                         <mat-option value="08:30">08:30</mat-option>
+                         <mat-option value="09:00">09:00</mat-option>
+                         <mat-option value="09:30">09:30</mat-option>
+                         <mat-option value="10:00">10:00</mat-option>
+                         <mat-option value="10:30">10:30</mat-option>
+                         <mat-option value="11:00">11:00</mat-option>
+                         <mat-option value="11:30">11:30</mat-option>
+                         <mat-option value="14:00">14:00</mat-option>
+                         <mat-option value="14:30">14:30</mat-option>
+                         <mat-option value="15:00">15:00</mat-option>
+                         <mat-option value="15:30">15:30</mat-option>
+                         <mat-option value="16:00">16:00</mat-option>
+                         <mat-option value="16:30">16:30</mat-option>
+                         <mat-option value="17:00">17:00</mat-option>
                       </mat-select>
                  </mat-form-field>
                  <mat-form-field class="col-3" appearance="outline">
                   <mat-label>Status da Consulta</mat-label>
-                      <mat-select required formControlName="statusConsultaFilterCtrl" >
+                      <mat-select formControlName="statusConsultaFilterCtrl" >
                         <mat-option>Selecione</mat-option>
                       <mat-option value="Agendada">Agendada</mat-option>
-                        <mat-option value="Em andamento">Em andamento</mat-option>
                         <mat-option value="Cancelada">Cancelada</mat-option>
                         <mat-option value="Finalizada">Finalizada</mat-option>
                       </mat-select>
