Criação da tela agenda

--- a/NutriSystem-Front/src/app/home/home.component.html
+++ b/NutriSystem-Front/src/app/home/home.component.html
@@ -47,6 +47,16 @@
                 routerLinkActive="active">Novo Consultório</div>
             </div>
           </div>
+          <div>
+          <div class="sub-menu">
+            <mat-icon class="sub-menu-icon">store_mall_directory</mat-icon>
+            <div class="sub-menu-title">Agenda</div>
+          </div>
+          <div class="sub-menu-items">
+            <div class="sub-menu-items-description item-color" routerLink="/agenda"
+              routerLinkActive="active">Nova Agenda</div>
+          </div>
+        </div>
   
         </div>
       </div>
