--- a/NutriSystem-Front/src/app/login/login.component.html
+++ b/NutriSystem-Front/src/app/login/login.component.html
@@ -48,10 +48,9 @@
 		<div class="login">
 				<input type="text" placeholder="Login" formControlName="crn" required><br>
 				<input type="password" placeholder="Senha" formControlName="senha" required><br>
-                <input type="button" value="Entrar" (click)="fazerLogin()">
-                <div class="wrap-form-link">
-                    <a (click)="cadastrarNutricionista()"> Quero me cadastrar</a>
-                </div>
+                <input class="btn1" type="button" value="Entrar" (click)="fazerLogin()">
+                <input class="btn2" type="button" value="Quero me cadastrar" (click)="cadastrarNutricionista()">
+                
         </div>
     </form>
     
