Atualização do login com token

--- a/NutriSystem-Front/src/app/marcar-consulta/marcar-consulta.component.html
+++ b/NutriSystem-Front/src/app/marcar-consulta/marcar-consulta.component.html
@@ -66,7 +66,7 @@
                           <mat-option>Selecione</mat-option>
                         <mat-option value="Agendada">Agendada</mat-option>
                           <mat-option value="Cancelada">Cancelada</mat-option>
-                          <mat-option value="Finalizada">Finalizada</mat-option>
+                          <mat-option value="Realizada">Realizada</mat-option>
                         </mat-select>
                   </mat-form-field>
               </form>
@@ -128,7 +128,7 @@
                         <mat-option>Selecione</mat-option>
                       <mat-option value="Agendada">Agendada</mat-option>
                         <mat-option value="Cancelada">Cancelada</mat-option>
-                        <mat-option value="Finalizada">Finalizada</mat-option>
+                        <mat-option value="Realizada">Realizada</mat-option>
                       </mat-select>
                 </mat-form-field>
                   <div class="col-xs-12 col-md-1">
