--- a/NutriSystem-Front/src/app/home/home.component.html
+++ b/NutriSystem-Front/src/app/home/home.component.html
@@ -14,6 +14,7 @@
               <mat-icon class="sub-menu-icon">account_circle</mat-icon>
               <div class="sub-menu-title">Perfil</div>
             </div>
+            <span>{{nome}}</span>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">event_available</mat-icon>
               <div class="sub-menu-title">Atendimento</div>
@@ -32,11 +33,11 @@
             </div>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">event_note</mat-icon>
-              <div class="sub-menu-title">Marcar Consulta</div>
+              <div class="sub-menu-title">Consulta</div>
             </div>
             <div class="sub-menu-items">
               <div class="sub-menu-items-description item-color" routerLink="/novaConsulta" routerLinkActive="active">
-                Nova Consulta</div>
+                Marcar Consulta</div>
             </div>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">store_mall_directory</mat-icon>
@@ -49,7 +50,7 @@
           </div>
           <div>
           <div class="sub-menu">
-            <mat-icon class="sub-menu-icon">store_mall_directory</mat-icon>
+            <mat-icon class="sub-menu-icon">event_available</mat-icon>
             <div class="sub-menu-title">Agenda</div>
           </div>
           <div class="sub-menu-items">
