--- a/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
+++ b/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
@@ -39,10 +39,40 @@
                                 <mat-label>Cidade</mat-label>
                                 <input matInput required formControlName="cidade" value={{formsRegister.value.cidade}}>
                             </mat-form-field>
-                            <mat-form-field class="col-1" appearance="outline">
+                            
+                            <mat-form-field class="col-xs-6 col-md-2" appearance="outline">
+                                <mat-select required formControlName="uf" value={{formsRegister.value.uf}}>
+                                  <mat-option>Selecione</mat-option>
+                                  <mat-option value="AC">Acre</mat-option>
+                                    <mat-option value="AL">Alagoas</mat-option>
+                                    <mat-option value="AP">Amapá</mat-option>
+                                    <mat-option value="AM">Amazonas</mat-option>
+                                    <mat-option value="BA">Bahia</mat-option>
+                                    <mat-option value="CE">Ceará</mat-option>
+                                    <mat-option value="DF">Distrito Federal</mat-option>
+                                    <mat-option value="ES">Espírito Santo</mat-option>
+                                    <mat-option value="GO">Goiás</mat-option>
+                                    <mat-option value="MA">Maranhão</mat-option>
+                                    <mat-option value="MT">Mato Grosso</mat-option>
+                                    <mat-option value="MS">Mato Grosso do Sul</mat-option>
+                                    <mat-option value="MG">Minas Gerais</mat-option>
+                                    <mat-option value="PA">Pará</mat-option>
+                                    <mat-option value="PB">Paraíba</mat-option>
+                                    <mat-option value="PR">Paraná</mat-option>
+                                    <mat-option value="PE">Pernambuco</mat-option>
+                                    <mat-option value="PI">Piauí</mat-option>
+                                    <mat-option value="RJ">Rio de Janeiro</mat-option>
+                                    <mat-option value="RN">Rio Grande do Norte</mat-option>
+                                    <mat-option value="RS">Rio Grande do Sul</mat-option>
+                                    <mat-option value="RO">Rondônia</mat-option>
+                                    <mat-option value="RR">Roraima</mat-option>
+                                    <mat-option value="SC">Santa Catarina</mat-option>
+                                    <mat-option value="SP">São Paulo</mat-option>
+                                    <mat-option value="SE">Sergipe</mat-option>
+                                    <mat-option value="TO">Tocantins</mat-option>
+                                </mat-select>
                                 <mat-label>UF</mat-label>
-                                <input matInput required formControlName="uf" value={{formsRegister.value.uf}}>
-                            </mat-form-field>
+                              </mat-form-field>
                             <mat-form-field class="col-2" appearance="outline">
                                 <mat-label>País</mat-label>
                                 <input matInput formControlName="pais" value={{formsRegister.value.pais}}>
