--- a/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
+++ b/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
@@ -77,7 +77,7 @@
                                 <mat-label>País</mat-label>
                                 <input matInput formControlName="pais" value={{formsRegister.value.pais}}>
                             </mat-form-field>
-                            <mat-form-field class="col-3" appearance="outline">
+                            <mat-form-field class="col-5" appearance="outline">
                                 <mat-label>E-mail</mat-label>
                                 <input matInput required formControlName="email" value={{formsRegister.value.email}}>
                             </mat-form-field>
@@ -130,6 +130,82 @@
                     </div>
                 </div>
             </mat-card>
+        </div>
+        <div class="col-12 mt-2">
+            <mat-card >
+                <mat-card-title>Lista de Consultório</mat-card-title> 
+                <mat-accordion>
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        Filtro de Consultório
+                      </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <form [formGroup]="filterFormConsultorio" class="row">
+                      <mat-form-field class="col-xs-12 col-md-4" appearance="outline">
+                        <mat-label>Nome</mat-label>
+                      <input matInput placeholder="Nome" formControlName="nomeFilterCtrl">
+                    </mat-form-field>
+                    <mat-form-field class="col-xs-6 col-md-4" appearance="outline">
+                        <mat-label>Endereço</mat-label>
+                      <input matInput placeholder="Endereço" formControlName="enderecoFilterCtrl">
+                    </mat-form-field>
+                      <div class="col-xs-12 col-md-1">
+                        <button mat-raised-button  (click)="filterTabelaConsultorio()" class="btn mt-2">Buscar</button>
+                      </div>
+                    </form>
+                  </mat-expansion-panel>
+                </mat-accordion>
+                  <div class="mat-elevation-z8 mt-2">
+                    <table mat-table aria-describedby="mydesc" [dataSource]="dataSource">
+                      <ng-container matColumnDef="nome">
+                        <th mat-header-cell *matHeaderCellDef id="nome"> Nome do Consultório</th>
+                        <td mat-cell *matCellDef="let element" > {{element.nomeFantasia}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="endereco">
+                        <th mat-header-cell *matHeaderCellDef id="endereco"> Endereço </th>
+                        <td mat-cell *matCellDef="let element"> {{element.endereco}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="numero">
+                        <th mat-header-cell *matHeaderCellDef id="numero"> Número </th>
+                        <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="bairro">
+                        <th mat-header-cell *matHeaderCellDef id="bairro"> Bairro </th>
+                        <td mat-cell *matCellDef="let element"> {{element.bairro}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="cidade">
+                        <th mat-header-cell *matHeaderCellDef id="cidade"> Cidade </th>
+                        <td mat-cell *matCellDef="let element"> {{element.cidade}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="telefone">
+                        <th mat-header-cell *matHeaderCellDef id="telefone"> Telefone </th>
+                        <td mat-cell *matCellDef="let element"> {{element.telefone}} </td>
+                      </ng-container>
+                      <ng-container matColumnDef="action">
+                        <th mat-header-cell *matHeaderCellDef id="action"> Ações </th>
+                        <td mat-cell *matCellDef="let element">
+                          <button mat-icon-button [matMenuTriggerFor]="menu">
+                            <mat-icon>more_vert</mat-icon>
+                          </button>
+                          <mat-menu #menu="matMenu">
+                            <button mat-menu-item (click)="getRowTableConsultorio(element)">
+                                <mat-icon>edit</mat-icon>
+                                <span>Editar</span>
+                            </button>
+                            <button mat-menu-item (click)="deleteConsultorio(element.key)">
+                              <mat-icon>delete</mat-icon>
+                              <span>Deletar</span>
+                            </button>
+                          </mat-menu>
+                        </td>
+                      </ng-container>
+                      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                    <mat-paginator #MatPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator> 
+                  </div>
+              </mat-card>
         </div>
     </div>
 </section>
