Atulalização tela de consulta

--- a/NutriSystem-Front/src/app/home/home.component.html
+++ b/NutriSystem-Front/src/app/home/home.component.html
@@ -14,7 +14,7 @@
               <mat-icon class="sub-menu-icon">account_circle</mat-icon>
               <div class="sub-menu-title">Perfil</div>
             </div>
-            <span>{{nome}}</span>
+            <div class="sub-menu-items-description item-color">{{nome}}</div>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">event_available</mat-icon>
               <div class="sub-menu-title">Atendimento</div>
@@ -69,7 +69,6 @@
         </button>
         <div class="font-header">NutriSistem</div>
         <span class="toolbar-spacer"></span>
-        <mat-icon class="icons-margim">work</mat-icon>
         <mat-icon class="icons-margim">notifications_active</mat-icon>
         <mat-icon style="margin-right: 15px" class="icons-margim" (click)="onLogout()">input</mat-icon>
       </mat-toolbar>
