--- a/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
+++ b/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="col-sm-12 col-md-1  mt-4">
                         <button mat-raised-button class="btn col-12"
-                            (click)="saveConsultorio()">Salvar</button>
+                        [disabled]="!formsRegister.valid" (click)="saveConsultorio()">Salvar</button>
                     </div>
                 </div>
             </mat-card>
