--- a/NutriSystem-Front/src/app/marcar-consulta/marcar-consulta.component.html
+++ b/NutriSystem-Front/src/app/marcar-consulta/marcar-consulta.component.html
@@ -8,21 +8,17 @@
               </mat-card-title>
               <form [formGroup]="formsRegister" class="row">
                   <mat-form-field class="col-xs-12 col-md-4" appearance="outline">
-                      <mat-select required formControlName="idConsultorio" value={{formsRegister.value.idConsultorio}} >
+                      <mat-label>Nutricionista</mat-label>
+                  <input matInput placeholder="Nome" disabled value={{nutricionistaLogado}}>
+                </mat-form-field>
+                  <mat-form-field class="col-xs-12 col-md-4" appearance="outline">
+                      <mat-select formControlName="idConsultorio" value={{formsRegister.value.idConsultorio}} >
                         <mat-option>Selecione</mat-option>
-                        <mat-option [value]="item.key" *ngFor="let item of consultorioList">{{ item.nomeFantasia }}
+                        <mat-option [value]="item.key" *ngFor="let item of consultoriosNutricionista">{{ item.nomeFantasia }}
                         </mat-option>
                       </mat-select>
                       <mat-label>Selecione o Consultório</mat-label>
                     </mat-form-field>
-                    <mat-form-field class="col-xs-12 col-md-4" appearance="outline">
-                        <mat-select required formControlName="idNutricionista" value={{formsRegister.value.idNutricionista}}>
-                          <mat-option>Selecione</mat-option>
-                          <mat-option [value]="item.key" *ngFor="let item of nutricionistaList">{{ item.nome }}
-                          </mat-option>
-                        </mat-select>
-                        <mat-label>Selecione o Nutricionista</mat-label>
-                      </mat-form-field>
                       <mat-form-field class="col-xs-12 col-md-4" appearance="outline">
                           <mat-select required formControlName="idPaciente" value={{formsRegister.value.idPaciente}}>
                             <mat-option>Selecione</mat-option>
@@ -77,6 +73,10 @@
                   </mat-panel-title>
                 </mat-expansion-panel-header>
                 <form [formGroup]="filterFormConsulta" class="row">
+                    <mat-form-field class="col-xs-12 col-md-4" appearance="outline">
+                        <mat-label>Paciente</mat-label>
+                    <input matInput placeholder="Paciente" formControlName="nomePacienteFilterCtrl">
+                  </mat-form-field>
                   <mat-form-field class="col-4" appearance="outline">
                     <input matInput readonly [matDatepicker]="picker2" placeholder="Data da Consulta"
                      formControlName="dataConsultaFilterCtrl">
@@ -123,6 +123,10 @@
             </mat-accordion>
               <div class="mat-elevation-z8 mt-2">
                 <table mat-table aria-describedby="mydesc" [dataSource]="dataSource">
+                    <ng-container matColumnDef="nomePaciente">
+                        <th mat-header-cell *matHeaderCellDef id="nomePaciente"> Paciente</th>
+                        <td mat-cell *matCellDef="let element" > {{element.nomePaciente}} </td>
+                      </ng-container>
                   <ng-container matColumnDef="horaConsulta">
                     <th mat-header-cell *matHeaderCellDef id="horaConsulta"> Horário da Consulta</th>
                     <td mat-cell *matCellDef="let element" > {{element.horaConsulta}} </td>
