--- a/NutriSystem-Front/src/app/home/home.component.html
+++ b/NutriSystem-Front/src/app/home/home.component.html
@@ -55,7 +55,7 @@
           </div>
           <div class="sub-menu-items">
             <div class="sub-menu-items-description item-color" routerLink="/agenda"
-              routerLinkActive="active">Nova Agenda</div>
+              routerLinkActive="active">Criar Agenda</div>
           </div>
         </div>
   
