--- a/NutriSystem-Front/src/app/cadastro-nutricionista/cadastro-nutricionista.component.html
+++ b/NutriSystem-Front/src/app/cadastro-nutricionista/cadastro-nutricionista.component.html
@@ -4,7 +4,7 @@
             <mat-card class="mat-card-padrao">
                 <div class="row">
                     <div class="col-12">
-                        <mat-card-title>Cadastro de Nutricionista </mat-card-title>
+                        <mat-card-title>Perfil </mat-card-title>
                         <form [formGroup]="formsRegister" class="row">
                             <mat-form-field class="col-5" appearance="outline">
                                 <mat-label>Nome</mat-label>
