--- a/NutriSystem-Front/src/app/home/home.component.html
+++ b/NutriSystem-Front/src/app/home/home.component.html
@@ -14,7 +14,7 @@
               <mat-icon class="sub-menu-icon">account_circle</mat-icon>
               <div class="sub-menu-title">Perfil</div>
             </div>
-            <div class="sub-menu-items-description item-color">{{nome}}</div>
+            <div class="sub-menu-items-description item-color" routerLink="/perfilNutricionista" routerLinkActive="active">{{nome}}</div>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">event_available</mat-icon>
               <div class="sub-menu-title">Atendimento</div>
