--- a/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
+++ b/NutriSystem-Front/src/app/cadastro-consultorio/cadastro-consultorio.component.html
@@ -85,22 +85,6 @@
                                 <mat-label>Telefone</mat-label>
                                 <input matInput formControlName="telefone" value={{formsRegister.value.telefone}}>
                             </mat-form-field>
-                            <mat-form-field class="col-3" appearance="outline">
-                                <mat-label>Celular</mat-label>
-                                <input matInput required formControlName="celular" value={{formsRegister.value.celular}}>
-                            </mat-form-field>
-                            <mat-form-field class="col-3" appearance="outline">
-                                <mat-label>Whatsapp</mat-label>
-                                <input matInput formControlName="whatsapp" value={{formsRegister.value.whatsapp}}>
-                            </mat-form-field>
-                            <mat-form-field class="col-3" appearance="outline">
-                                <mat-label>Instagram</mat-label>
-                                <input matInput formControlName="instagram" value={{formsRegister.value.instagram}}>
-                            </mat-form-field>
-                            <mat-form-field class="col-3" appearance="outline">
-                                <mat-label>Facebook</mat-label>
-                                <input matInput formControlName="facebook" value={{formsRegister.value.facebook}}>
-                            </mat-form-field>
                             <mat-form-field class="col-2" appearance="outline">
                                 <mat-label>Hora Abertura</mat-label>
                                 <input matInput formControlName="horaAbertura" value={{formsRegister.value.horaAbertura}}>
@@ -120,15 +104,12 @@
                         </form>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-1 offset-md-10 mt-4">
-                        <button mat-raised-button class="btn col-12" (click)="clearConsultorio()">Cancelar</button>
-                    </div>
-                    <div class="col-sm-12 col-md-1  mt-4">
-                        <button mat-raised-button class="btn col-12"
+                    <div class="col-sm-3 d-inline-block offset-md-10">
+                        <button mat-raised-button class="btn ml-2" (click)="clearConsultorio()">Limpar</button>
+                    
+                        <button mat-raised-button class="btn ml-2"
                         [disabled]="!formsRegister.valid" (click)="saveConsultorio()">Salvar</button>
                     </div>
-                </div>
             </mat-card>
         </div>
         <div class="col-12 mt-2">
