--- a/NutriSystem-Front/src/app/login/login.component.scss
+++ b/NutriSystem-Front/src/app/login/login.component.scss
@@ -8,6 +8,7 @@ body{
 	color: #fff;
 	font-family: Arial;
 	font-size: 12px;
+	overflow: hidden;
 }
 
 .body{
@@ -23,7 +24,7 @@ body{
 	//-webkit-filter: blur(5px);
 	z-index: 0;
 	opacity: 2.8;
-	overflow: visible;
+	overflow: hidden;
 }
 
 * {
@@ -46,8 +47,10 @@ body{
 	  color: #FF5722;
   }
   mat-card-content {
+	margin-top: -10px;
 	display: flex;
 	justify-content: center;
+	width: 350px;
   }
 
   .mat-button {
