--- a/NutriSystem-Front/src/app/home/home.component.html
+++ b/NutriSystem-Front/src/app/home/home.component.html
@@ -17,7 +17,7 @@
             <div class="sub-menu-items-description item-color" routerLink="/perfilNutricionista" routerLinkActive="active">{{nome}}</div>
             <div class="sub-menu">
               <mat-icon class="sub-menu-icon">event_available</mat-icon>
-              <div class="sub-menu-title">Atendimento</div>
+              <div class="sub-menu-title">Anamnese</div>
             </div>
             <div class="sub-menu-items">
               <div class="sub-menu-items-description item-color" routerLink="/" routerLinkActive="active">
