--- a/NutriSystem-Front/src/app/login/login.component.html
+++ b/NutriSystem-Front/src/app/login/login.component.html
@@ -24,8 +24,7 @@
 	  <div class="row">
 		<button mat-button class="col-12" type="submit" (click)="fazerLogin()">Entrar</button>
 	  </div>
-	  <p class="text-cadastro">Não uma conta? <a (click)="cadastrarNutricionista()">Cadastre-se</a></p>
-	  
+	  <p class="text-cadastro">Não tem uma conta? <a (click)="cadastrarNutricionista()">Cadastre-se</a></p>
 
 	</form>
   </mat-card-content>
